--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@types/react": "19.1.3",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.26.0",
+    "lucide-react": "^0.507.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
     "typescript": "5.8.2"
