--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,7 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "exports": {
     "./postcss.config": "./postcss.config.mjs",
     "./globals.css": "./src/globals.css",
@@ -35,6 +36,7 @@
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "shiki": "^3.4.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.9"
   }
