--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+,
 # Dependencies
 node_modules
 .pnp
@@ -17,6 +17,7 @@ coverage
 
 # Turbo
 .turbo
+.cache/
 
 # Vercel
 .vercel
