--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "web",
+  "name": "dashboard",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -14,24 +13,20 @@
   "prettier": "@repo/prettier-config",
   "dependencies": {
     "@repo/ui": "workspace:*",
-    "next": "^15.3.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "shiki": "^3.4.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.3.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "^4.1.5",
-    "@types/node": "^22.15.14",
-    "@types/react": "19.1.3",
-    "@types/react-dom": "19.1.3",
-    "eslint": "^9.26.0",
-    "lucide-react": "^0.507.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
-    "typescript": "5.8.3"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9"
   }
 }
