--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,11 +34,13 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "shiki": "^3.4.0",
