--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,12 +13,15 @@
   },
   "prettier": "@repo/prettier-config",
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@repo/ui": "workspace:*",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "shiki": "^3.4.0"
+    "react-hook-form": "^7.56.3",
+    "shiki": "^3.4.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
