--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,20 +13,23 @@
   "prettier": "@repo/prettier-config",
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "typescript": "^5",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
+    "eslint": "^9",
+    "lucide-react": "^0.509.0",
     "tailwindcss": "^4",
-    "eslint": "^9"
+    "typescript": "^5"
   }
 }
