--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,7 +12,7 @@
   },
   "prettier": "@repo/prettier-config",
   "dependencies": {
-    "@repo/ui": "workspace:*",
+    "@repo/design-system": "workspace:*",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
