--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,7 @@
   "prettier": "@repo/prettier-config",
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@repo/ui": "workspace:*",
+    "@repo/design-system": "workspace:*",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
