--- a/packages/design-system/components.json
+++ b/packages/design-system/components.json
@@ -11,11 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@repo/ui/components",
-    "ui": "@repo/ui/components/ui",
-    "utils": "@repo/ui/lib/utils",
-    "lib": "@repo/ui/lib",
-    "hooks": "@repo/ui/hooks"
+    "components": "@repo/design-system/components",
+    "ui": "@repo/design-system/components/ui",
+    "utils": "@repo/design-system/lib/utils",
+    "lib": "@repo/design-system/lib",
+    "hooks": "@repo/design-system/hooks"
   },
   "iconLibrary": "lucide"
 }
