refactor: geist design

--- a/apps/dashboard/data/mock/projects.json
+++ b/apps/dashboard/data/mock/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "twzbncvo",
-    "name": "Scry Studio",
+    "name": "scry-web",
     "domain": "https://studio.scry.dev",
     "status": "Active",
     "stats": {
