chore: update package license

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -28,7 +28,7 @@
     "scry"
   ],
   "author": "moonlitgrace <moonlitgrace.gaia@gmail.com>",
-  "license": "GPL-3.0-only",
+  "license": "MIT",
   "publishConfig": {
     "access": "public",
     "provenance": true
