--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "changeset": "changeset",
     "release": "pnpm release:version && pnpm release:publish",
     "release:version": "changeset version",
-    "release:publish": "pnpm build --filter=./packages/** && changeset publish"
+    "release:publish": "pnpm build --filter=./packages/** && changeset publish",
+    "prepare": "husky",
+    "pre-commit": "lint-staged"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.4",
     "@repo/prettier-config": "workspace:*",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
     "turbo": "^2.5.3",
     "typescript": "5.8.3"
@@ -23,5 +27,10 @@
   "packageManager": "pnpm@10.11.0",
   "engines": {
     "node": ">=18"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,md,css}": [
+      "pnpm format:fix"
+    ]
   }
 }
