chore: update ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - develop
   pull_request:
-    types: [opened, synchronize]
 
 jobs:
   build:
