--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,27 +13,27 @@
   },
   "prettier": "@repo/prettier-config",
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "catalog:",
     "@repo/design-system": "workspace:*",
     "next": "^15.3.2",
-    "next-themes": "^0.4.6",
+    "next-themes": "catalog:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.3",
-    "shiki": "^3.4.1",
-    "zod": "^3.24.4"
+    "react-hook-form": "catalog:",
+    "shiki": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@svgr/webpack": "^8.1.0",
+    "@svgr/webpack": "catalog:",
     "@tailwindcss/postcss": "^4.1.6",
     "@types/node": "^22.15.17",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
     "eslint": "^9.26.0",
-    "lucide-react": "^0.510.0",
+    "lucide-react": "catalog:",
     "tailwindcss": "^4.1.6",
     "typescript": "5.8.3"
   }
