--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.15.17",
-    "tsup": "^8.4.0",
+    "tsup": "catalog:",
     "typescript": "^5.8.3"
   }
 }
