--- a/tools/prettier/package.json
+++ b/tools/prettier/package.json
@@ -12,7 +12,7 @@
   },
   "prettier": "@repo/prettier-config",
   "dependencies": {
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11"
+    "prettier": "catalog:",
+    "prettier-plugin-tailwindcss": "catalog:"
   }
 }
