--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,24 +13,24 @@
   "prettier": "@repo/prettier-config",
   "dependencies": {
     "@repo/design-system": "workspace:*",
-    "next": "15.3.2",
+    "next": "^15.3.2",
     "next-themes": "catalog:",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@svgr/webpack": "catalog:",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@tailwindcss/postcss": "^4.1.6",
+    "@types/node": "^22.15.17",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5",
+    "eslint": "^9.26.0",
     "lucide-react": "catalog:",
-    "tailwindcss": "^4",
-    "typescript": "^5",
+    "tailwindcss": "^4.1.6",
+    "typescript": "^5.8.3",
     "use-debounce": "catalog:"
   }
 }
