--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "husky": "catalog:",
     "lint-staged": "catalog:",
     "prettier": "catalog:",
+    "syncpack": "^13.0.4",
     "turbo": "catalog:",
-    "typescript": "5.8.3"
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.11.0",
   "engines": {
