--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -23,14 +23,14 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.6",
-    "@types/node": "^22.15.17",
-    "@types/react": "19.1.4",
-    "@types/react-dom": "19.1.5",
-    "eslint": "^9.26.0",
+    "@tailwindcss/postcss": "catalog:",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "eslint": "catalog:",
     "postcss": "catalog:",
-    "tailwindcss": "^4.1.6",
-    "typescript": "^5.8.3"
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   },
   "dependencies": {
     "@hookform/resolvers": "catalog:",
@@ -50,8 +50,8 @@
     "clsx": "catalog:",
     "lucide-react": "catalog:",
     "next-themes": "catalog:",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-hook-form": "catalog:",
     "shiki": "catalog:",
     "tailwind-merge": "catalog:",
