--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -30,8 +30,8 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^22.15.17",
+    "@types/node": "catalog:",
     "tsup": "catalog:",
-    "typescript": "^5.8.3"
+    "typescript": "catalog:"
   }
 }
