--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -20,8 +20,13 @@ catalog:
   "@radix-ui/react-toggle": ^1.1.8
   "@radix-ui/react-toggle-group": ^1.1.9
   "@svgr/webpack": ^8.1.0
+  "@tailwindcss/postcss": ^4.1.6
+  "@types/node": ^22.15.17
+  "@types/react": 19.1.4
+  "@types/react-dom": 19.1.5
   class-variance-authority: ^0.7.1
   clsx: ^2.1.1
+  eslint: ^9.26.0
   eslint-config-prettier: ^10.1.5
   eslint-plugin-only-warn: ^1.1.0
   eslint-plugin-react: ^7.37.5
@@ -31,16 +36,22 @@ catalog:
   husky: ^9.1.7
   lint-staged: ^16.0.0
   lucide-react: ^0.510.0
+  next: ^15.3.2
   next-themes: ^0.4.6
   postcss: ^8.5.3
   prettier: ^3.5.3
   prettier-plugin-tailwindcss: ^0.6.11
+  react: ^19.1.0
+  react-dom: ^19.1.0
   react-hook-form: ^7.56.3
   shiki: ^3.4.1
+  syncpack: ^13.0.4
   tailwind-merge: ^3.3.0
+  tailwindcss: ^4.1.6
   tsup: ^8.4.0
   turbo: ^2.5.3
   tw-animate-css: ^1.2.9
+  typescript: ^5.8.3
   typescript-eslint: ^8.32.1
   use-debounce: ^10.0.4
   zod: ^3.24.4
