--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -11,14 +11,14 @@
   "devDependencies": {
     "@eslint/js": "catalog:",
     "@next/eslint-plugin-next": "catalog:",
-    "eslint": "^9.26.0",
+    "eslint": "catalog:",
     "eslint-config-prettier": "catalog:",
     "eslint-plugin-only-warn": "catalog:",
     "eslint-plugin-react": "catalog:",
     "eslint-plugin-react-hooks": "catalog:",
     "eslint-plugin-turbo": "catalog:",
     "globals": "catalog:",
-    "typescript": "^5.8.3",
+    "typescript": "catalog:",
     "typescript-eslint": "catalog:"
   }
 }
