chore: add pnpm script and sync config

--- a/.syncpackrc
+++ b/.syncpackrc
@@ -1,3 +1,5 @@
 {
-  "dependencyTypes": ["prod", "dev"]
+  "dependencyTypes": ["prod", "dev"],
+  "workspace": true,
+  "includeWorkspaceRoot": true
 }
