chore: add semver range and lint script

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "deps:check": "syncpack list-mismatches",
     "deps:fix": "syncpack fix-mismatches",
     "deps:format": "syncpack format",
+    "deps:lint": "syncpack lint",
     "dev": "turbo run dev",
     "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
     "format:fix": "pnpm format --write",
