--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,36 +1,36 @@
 {
   "name": "dashboard",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "next lint --max-warnings 0",
-    "typecheck": "tsc --noEmit",
-    "format": "prettier --check . --ignore-path ../../.gitignore"
-  },
-  "prettier": "@repo/prettier-config",
   "dependencies": {
     "@repo/design-system": "workspace:*",
-    "next": "15.3.2",
-    "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "catalog:",
+    "next-themes": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "lucide-react": "^0.510.0",
-    "tailwindcss": "^4",
-    "typescript": "^5",
-    "use-debounce": "^10.0.4"
+    "@svgr/webpack": "catalog:",
+    "@tailwindcss/postcss": "catalog:",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "eslint": "catalog:",
+    "lucide-react": "catalog:",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:",
+    "use-debounce": "catalog:"
+  },
+  "prettier": "@repo/prettier-config",
+  "private": true,
+  "scripts": {
+    "build": "next build --turbopack",
+    "dev": "next dev --turbopack",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "next lint --max-warnings 0",
+    "start": "next start",
+    "typecheck": "tsc --noEmit"
   }
 }
