--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,57 @@
 packages:
-  - "apps/*"
-  - "packages/*"
-  - "tools/*"
+  - apps/*
+  - packages/*
+  - tools/*
+catalog:
+  "@changesets/cli": ^2.29.4
+  "@eslint/js": ^9.25.0
+  "@hookform/resolvers": ^5.0.1
+  "@next/eslint-plugin-next": ^15.3.2
+  "@radix-ui/react-accordion": ^1.2.10
+  "@radix-ui/react-avatar": ^1.1.9
+  "@radix-ui/react-collapsible": ^1.1.10
+  "@radix-ui/react-dropdown-menu": ^2.1.14
+  "@radix-ui/react-label": ^2.1.6
+  "@radix-ui/react-scroll-area": ^1.2.8
+  "@radix-ui/react-select": ^2.2.4
+  "@radix-ui/react-separator": ^1.1.6
+  "@radix-ui/react-slot": ^1.2.2
+  "@radix-ui/react-tabs": ^1.1.11
+  "@radix-ui/react-toggle": ^1.1.8
+  "@radix-ui/react-toggle-group": ^1.1.9
+  "@svgr/webpack": ^8.1.0
+  "@tailwindcss/postcss": ^4.1.6
+  "@types/node": ^22.15.17
+  "@types/react": 19.1.4
+  "@types/react-dom": 19.1.5
+  class-variance-authority: ^0.7.1
+  clsx: ^2.1.1
+  eslint: ^9.26.0
+  eslint-config-prettier: ^10.1.5
+  eslint-plugin-only-warn: ^1.1.0
+  eslint-plugin-react: ^7.37.5
+  eslint-plugin-react-hooks: ^5.2.0
+  eslint-plugin-turbo: ^2.5.3
+  globals: ^16.1.0
+  husky: ^9.1.7
+  lint-staged: ^16.0.0
+  lucide-react: ^0.510.0
+  next: ^15.3.2
+  next-themes: ^0.4.6
+  postcss: ^8.5.3
+  prettier: ^3.5.3
+  prettier-plugin-tailwindcss: ^0.6.11
+  react: ^19.1.0
+  react-dom: ^19.1.0
+  react-hook-form: ^7.56.3
+  shiki: ^3.4.1
+  syncpack: ^13.0.4
+  tailwind-merge: ^3.3.0
+  tailwindcss: ^4.1.6
+  tsup: ^8.4.0
+  turbo: ^2.5.3
+  tw-animate-css: ^1.2.9
+  typescript: ^5.8.3
+  typescript-eslint: ^8.32.1
+  use-debounce: ^10.0.4
+  zod: ^3.24.4
