--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -1,24 +1,24 @@
 {
   "name": "@repo/eslint-config",
   "version": "0.0.0",
-  "type": "module",
-  "private": true,
+  "devDependencies": {
+    "@eslint/js": "catalog:",
+    "@next/eslint-plugin-next": "catalog:",
+    "eslint": "catalog:",
+    "eslint-config-prettier": "catalog:",
+    "eslint-plugin-only-warn": "catalog:",
+    "eslint-plugin-react": "catalog:",
+    "eslint-plugin-react-hooks": "catalog:",
+    "eslint-plugin-turbo": "catalog:",
+    "globals": "catalog:",
+    "typescript": "catalog:",
+    "typescript-eslint": "catalog:"
+  },
   "exports": {
     "./base": "./base.js",
     "./next-js": "./next.js",
     "./react-internal": "./react-internal.js"
   },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@next/eslint-plugin-next": "^15.3.2",
-    "eslint": "^9.25.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-turbo": "^2.5.3",
-    "globals": "^16.1.0",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.32.1"
-  }
+  "private": true,
+  "type": "module"
 }
