--- a/turbo.json
+++ b/turbo.json
@@ -23,6 +23,9 @@
     "typecheck": {
       "dependsOn": ["^build"],
       "outputs": [".cache/tsbuildinfo.json"]
+    },
+    "ui-add": {
+      "cache": false
     }
   }
 }
