--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -5,6 +5,7 @@
     "@hookform/resolvers": "catalog:",
     "@radix-ui/react-accordion": "catalog:",
     "@radix-ui/react-avatar": "catalog:",
+    "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-collapsible": "catalog:",
     "@radix-ui/react-dropdown-menu": "catalog:",
     "@radix-ui/react-label": "catalog:",
@@ -55,7 +56,8 @@
   "scripts": {
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint . --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "ui-add": "pnpm dlx shadcn@latest add"
   },
   "type": "module"
 }
