refactor: re-usable header comp. with links props

--- a/apps/dashboard/data/mock/projects.json
+++ b/apps/dashboard/data/mock/projects.json
@@ -1,8 +1,8 @@
 [
   {
     "id": "twzbncvo",
-    "name": "scry-web",
-    "domain": "https://studio.scry.dev",
+    "name": "scryjs-dashboard",
+    "domain": "https://scryjs.space",
     "status": "Active",
     "stats": {
       "errors": 41,
