--- a/apps/dashboard/data/mock/projects.json
+++ b/apps/dashboard/data/mock/projects.json
@@ -11,7 +11,7 @@
     },
     "latestError": {
       "errorMsg": "AuthError: Invalid token signature",
-      "env": "PROD",
+      "env": "production",
       "timestamp": "2025-05-12T17:25:00.000Z"
     }
   },
@@ -27,7 +27,7 @@
     },
     "latestError": {
       "errorMsg": "ValidationError: Invalid post data",
-      "env": "PROD",
+      "env": "production",
       "timestamp": "2025-05-12T14:05:00.000Z"
     }
   }
