--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -5,7 +5,7 @@
     "@hookform/resolvers": "catalog:",
     "@radix-ui/react-accordion": "catalog:",
     "@radix-ui/react-avatar": "catalog:",
-    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-checkbox": "catalog:",
     "@radix-ui/react-collapsible": "catalog:",
     "@radix-ui/react-dropdown-menu": "catalog:",
     "@radix-ui/react-label": "catalog:",
