--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,8 @@ packages:
   - apps/*
   - packages/*
   - tools/*
+publicHoistPattern:
+  - "*prettier*"
 catalog:
   "@changesets/cli": ^2.29.4
   "@eslint/js": ^9.25.0
@@ -9,6 +11,7 @@ catalog:
   "@next/eslint-plugin-next": ^15.3.2
   "@radix-ui/react-accordion": ^1.2.10
   "@radix-ui/react-avatar": ^1.1.9
+  "@radix-ui/react-checkbox": ^1.3.1
   "@radix-ui/react-collapsible": ^1.1.10
   "@radix-ui/react-dropdown-menu": ^2.1.14
   "@radix-ui/react-label": ^2.1.6
@@ -40,6 +43,7 @@ catalog:
   next-themes: ^0.4.6
   postcss: ^8.5.3
   prettier: ^3.5.3
+  prettier-plugin-organize-imports: ^4.1.0
   prettier-plugin-tailwindcss: ^0.6.11
   react: ^19.1.0
   react-dom: ^19.1.0
