--- a/tools/prettier/package.json
+++ b/tools/prettier/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "prettier": "catalog:",
+    "prettier-plugin-organize-imports": "catalog:",
     "prettier-plugin-tailwindcss": "catalog:"
   },
   "exports": {
