--- a/tools/prettier/package.json
+++ b/tools/prettier/package.json
@@ -6,10 +6,7 @@
     "prettier-plugin-organize-imports": "catalog:",
     "prettier-plugin-tailwindcss": "catalog:"
   },
-  "exports": {
-    ".": "./index.js"
-  },
-  "license": "MIT",
+  "main": "./index.js",
   "prettier": "@repo/prettier-config",
   "private": true,
   "scripts": {
