--- a/tools/typescript/package.json
+++ b/tools/typescript/package.json
@@ -1,9 +1,5 @@
 {
   "name": "@repo/typescript-config",
   "version": "0.0.0",
-  "license": "MIT",
-  "private": true,
-  "publishConfig": {
-    "access": "public"
-  }
+  "private": true
 }
